<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="64dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sadho.denisson.fiscalizarmanaus.activities.ActNovaOcorrencia"
    tools:showIn="@layout/act_nova_ocorrencia">

    <RelativeLayout
        android:id="@+id/rl_basics_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="64dp">

        <TextView
            android:id="@+id/tv_tipo"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/ponto_onibus"
            android:layout_marginRight="8dp"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:textSize="9pt"/>

        <Spinner
            android:id="@+id/sp_opcao"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_toEndOf="@id/tv_tipo"
            android:layout_toRightOf="@id/tv_tipo"/>

        <ImageButton
            android:id="@+id/ib_foto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/tv_tipo"
            android:src="@drawable/ic_photo_camera_black_48dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ib_foto">
            <EditText
                android:id="@+id/et_endereco_referencia"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/desc_endereco_referencia"
                android:inputType="text"
                android:textCursorDrawable="@null"
                android:maxLength="35"
                android:singleLine="true"
                style="@style/AppTheme"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_endereco"
            android:id="@+id/til_situacao">
            <EditText
                android:id="@+id/et_situacao"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/desc_situacao"
                android:inputType="text"
                android:textCursorDrawable="@null"
                android:maxLength="35"
                android:singleLine="true"
                style="@style/AppTheme"/>
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_gps_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginBottom="64dp">

        <TextView
            android:id="@+id/tv_lbl_tipo"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/ponto_onibus"
            android:layout_marginRight="8dp"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_lbl_opcao"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/ponto_onibus"
            android:layout_marginLeft="16dp"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:layout_toEndOf="@id/tv_lbl_tipo"
            android:layout_toRightOf="@id/tv_lbl_tipo"/>

        <ImageButton
            android:id="@+id/ib_maps"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/tv_lbl_opcao"
            android:src="@drawable/ic_add_location_black_48dp"/>

        <TextView
            android:id="@+id/tv_lbl_endereco_referencia"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_below="@id/ib_maps"
            android:text="@string/lbl_referencia"
            android:layout_marginRight="8dp"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_endereco_referencia"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/lbl_referencia"
            android:layout_marginLeft="16dp"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:layout_toEndOf="@id/tv_lbl_endereco_referencia"
            android:layout_toRightOf="@id/tv_lbl_endereco_referencia"
            android:layout_below="@id/ib_maps"/>

        <TextView
            android:id="@+id/tv_lbl_descricao"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_below="@id/tv_lbl_endereco_referencia"
            android:text="@string/lbl_descricao"
            android:layout_marginRight="8dp"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_descricao"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/lbl_descricao"
            android:layout_marginLeft="16dp"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:layout_toEndOf="@id/tv_lbl_descricao"
            android:layout_toRightOf="@id/tv_lbl_descricao"
            android:layout_below="@id/tv_lbl_endereco_referencia"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="bottom|right"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"

        android:background="@color/cardview_light_background"
        android:layout_gravity="bottom|right"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selector_button"
            android:textColor="@color/cardview_light_background"
            android:enabled="true"
            android:visibility="gone"
            android:layout_marginRight="16dp"
            android:text="@string/lbl_voltar"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selector_button"
            android:textColor="@color/cardview_light_background"
            android:enabled="true"
            android:visibility="gone"
            android:text="@string/lbl_salvar"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selector_button"
            android:textColor="@color/cardview_light_background"
            android:enabled="true"
            android:text="@string/lbl_proximo"/>

    </LinearLayout>

</RelativeLayout>
